--- a/index.html
+++ b/index.html
@@ -10,25 +10,39 @@
 
 <body>
     <div class="container-wrapper">
-        <div class="phone-image"><img src="./img/instagram-celular.png" alt="Instagram no celular"></div>
+        <div class="phone-image">
+            <img src="./img/instagram-celular.png" alt="Instagram no celular">
+        </div>
 
         <div class="login-container">
-            <div class="login">
-                <img src="img/instagram-logo.png" alt="Instagram logo">
-                <span>Telefone, nome de usuário ou email</span>
-                <input type="text">
-                <span>Senha</span>
-                <input type="password">
-                <a href="#" class="btn-colored">Entrar</a>
-                <p class="other">OU</p>
-                <a href="#"><img src="./img/facebook-icon.png" alt="Facebook logo"> Entrar com o Facebook</a>
-                <a href="#">Esqueceu a senha</a>
+            <div class="container">
+                <div class="login-img">
+                    <img src="img/instagram-logo.png" alt="Instagram logo">
+                </div>
+                <div class="login-field">
+                    <input type="text" placeholder="Telefone, nome de usuário ou email">
+                </div>
+                <div class="login-field">
+                    <input type="password" placeholder="Senha">
+                </div>
+                <div class="login-btn">
+                    <a href="#" class="btn-colored">Entrar</a>
+                </div>
+                <div class="other">
+                    <p>OU</p>
+                </div>
+                <div class="login-fc">
+                    <a href="#">Entrar com o Facebook</a>
+                </div>
+                <div class="login-forgot-pswd">
+                    <a href="#">Esqueceu a senha?</a>
+                </div> 
             </div>
-            <div class="register">
-                <p>Não tem conta? <a href="#">Cadastre-se</a></p>
+            <div class="container register">
+                <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
             </div>
             <div class="download-app">
-                <p>Obtenha o alicativo</p>
+                <p>Obtenha o aplicativo</p>
                 <div class="app-link">
                     <img src="./img/apple-button.png" alt="Download Intagram para IOS">
                     <img src="./img/googleplay-button.png" alt="Download Intagram para Android">
